--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   ],
   "devDependencies": {
     "@size-limit/preset-small-lib": "^4.6.2",
+    "@types/elliptic": "^6.4.14",
     "dids": "^2.1.0",
     "eslint": "^7.24.0",
     "eslint-config-3box": "^0.2.0",
@@ -49,7 +50,9 @@
   },
   "dependencies": {
     "@stablelib/ed25519": "^1.0.1",
-    "did-jwt": "^5.0.1",
+    "did-jwt": "^6.9.0",
+    "did-key-creator": "^0.3.2",
+    "elliptic": "^6.5.4",
     "fast-json-stable-stringify": "^2.1.0",
     "rpc-utils": "^0.3.4",
     "uint8arrays": "^2.1.5"
