--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "version": "1.1.0",
   "license": "(Apache-2.0 OR MIT)",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "main": "lib/index.js",
+  "typings": "lib/index.d.ts",
   "files": [
     "lib",
     "src"
@@ -19,26 +19,25 @@
     "size": "size-limit",
     "analyze": "size-limit --why"
   },
-  "name": "key-did-provider-ed25519",
-  "author": "Joel Thorstensson",
-  "module": "dist/key-did-provider-ed25519.esm.js",
+  "name": "key-did-provider-p256",
+  "author": "Brent Shambaugh",
+  "module": "lib/key-did-provider-p256.esm.js",
   "size-limit": [
     {
-      "path": "dist/key-did-provider-ed25519.cjs.production.min.js",
+      "path": "lib/key-did-provider-p256.cjs.production.min.js",
       "limit": "175 KB"
     },
     {
-      "path": "dist/key-did-provider-ed25519.esm.js",
+      "path": "lib/key-did-provider-p256.esm.js",
       "limit": "175 KB"
     }
   ],
   "devDependencies": {
     "@size-limit/preset-small-lib": "^4.6.2",
     "@types/elliptic": "^6.4.14",
-    "dids": "^2.1.0",
     "eslint": "^7.24.0",
     "eslint-config-3box": "^0.2.0",
-    "husky": "^6.0.0",
+    "jest": "^29.2.2",
     "prettier": "^2.1.2",
     "size-limit": "^4.6.2",
     "tsdx": "^0.14.1",
@@ -49,8 +48,8 @@
     "testEnvironment": "node"
   },
   "dependencies": {
-    "@stablelib/ed25519": "^1.0.1",
     "did-jwt": "^6.9.0",
+    "dids": "^2.1.0",
     "did-key-creator": "^0.3.2",
     "elliptic": "^6.5.4",
     "fast-json-stable-stringify": "^2.1.0",
