--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "version": "1.2.0",
+  "version": "1.3.0",
   "license": "(Apache-2.0 OR MIT)",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
+  "type":"module",
   "files": [
     "lib",
     "src"
